# CMake_Qt_Mock_Proj

./: CMakeLists.txt  ReadMe.md  bld.ps1  bld.sh  run.ps1  run.sh
Data-Layer/: CMakeLists.txt  DataStore.cpp  DataStore.h
GUI-Layer/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
Main/: CMakeLists.txt
